// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Lives Bigger height 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": 360,
        "paddingLeft": 129.6,
        "width": 489.6,
      },
    ]
  }
  testID="lives"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 1000,
          "flex": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        false,
        Object {
          "height": 360,
          "width": 360,
        },
      ]
    }
    testID="lives-3"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {},
              Array [
                Object {
                  "color": "#546E7A",
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                Object {
                  "fontSize": 120,
                },
              ],
            ]
          }
        >
          x
          3
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {},
              Array [
                Object {
                  "color": "#546E7A",
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                Object {
                  "fontSize": 120,
                },
              ],
            ]
          }
        >
          x
          2
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 216,
        "left": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
          Object {
            "scaleX": 1,
          },
          Object {
            "scaleY": 1,
          },
        ],
        "width": 216,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={216}
      bbWidth={216}
      color={4294967295}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 216,
            "width": 216,
          },
          Object {
            "flex": 0,
            "height": 216,
            "width": 216,
          },
        ]
      }
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
          fill={4294967295}
          propList={
            Array [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          stroke={4294967295}
          strokeWidth={5}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={216}
        bbWidth={216}
        color={4294393682}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 216,
              "width": 216,
            },
            Object {
              "flex": 0,
              "height": 216,
              "width": 216,
            },
          ]
        }
        tintColor={4294393682}
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0 .001h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
            fill={4294393682}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={216}
        bbWidth={216}
        color={4294393682}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 216,
              "width": 216,
            },
            Object {
              "flex": 0,
              "height": 216,
              "width": 216,
            },
          ]
        }
        tintColor={4294393682}
        vbHeight={25}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M11.727 5.64C10.745 4.79 9.218 4 7.964 4 4.964 4 3 7.279 3 9.95 3 14.868 12 21 12 21s9-6.071 9-11.05C21 7.279 19.036 4 16.036 4c-1.036 0-2.29.546-3.272 1.275l1.472 1.76-1.963 1.7 2.782 2.915L12 15.293l1.527-3.46-2.89-2.915 2.072-1.882s-.49-.79-.982-1.397z"
            fill={4294393682}
            fillRule={1}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Storyshots Lives Default 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": 180,
        "paddingLeft": 64.8,
        "width": 244.8,
      },
    ]
  }
  testID="lives"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 1000,
          "flex": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#ECEFF1",
        },
        Object {
          "height": 180,
          "width": 180,
        },
      ]
    }
    testID="lives"
  />
  <View
    style={
      Object {
        "height": 108,
        "left": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
          Object {
            "scaleX": 1,
          },
          Object {
            "scaleY": 1,
          },
        ],
        "width": 108,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={108}
      bbWidth={108}
      color={4294967295}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 108,
            "width": 108,
          },
          Object {
            "flex": 0,
            "height": 108,
            "width": 108,
          },
        ]
      }
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
          fill={4294967295}
          propList={
            Array [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          stroke={4294967295}
          strokeWidth={5}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4293718001}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4293718001}
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0 .001h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
            fill={4293718001}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4293718001}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4293718001}
        vbHeight={25}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M11.727 5.64C10.745 4.79 9.218 4 7.964 4 4.964 4 3 7.279 3 9.95 3 14.868 12 21 12 21s9-6.071 9-11.05C21 7.279 19.036 4 16.036 4c-1.036 0-2.29.546-3.272 1.275l1.472 1.76-1.963 1.7 2.782 2.915L12 15.293l1.527-3.46-2.89-2.915 2.072-1.882s-.49-.79-.982-1.397z"
            fill={4293718001}
            fillRule={1}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Storyshots Lives Fast slide 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": 180,
        "paddingLeft": 64.8,
        "width": 244.8,
      },
    ]
  }
  testID="lives"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 1000,
          "flex": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        false,
        Object {
          "height": 180,
          "width": 180,
        },
      ]
    }
    testID="lives-3"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {},
              Array [
                Object {
                  "color": "#546E7A",
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                Object {
                  "fontSize": 60,
                },
              ],
            ]
          }
        >
          x
          3
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {},
              Array [
                Object {
                  "color": "#546E7A",
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                Object {
                  "fontSize": 60,
                },
              ],
            ]
          }
        >
          x
          2
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 108,
        "left": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
          Object {
            "scaleX": 1,
          },
          Object {
            "scaleY": 1,
          },
        ],
        "width": 108,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={108}
      bbWidth={108}
      color={4294967295}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 108,
            "width": 108,
          },
          Object {
            "flex": 0,
            "height": 108,
            "width": 108,
          },
        ]
      }
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
          fill={4294967295}
          propList={
            Array [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          stroke={4294967295}
          strokeWidth={5}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4294393682}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4294393682}
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0 .001h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
            fill={4294393682}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4294393682}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4294393682}
        vbHeight={25}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M11.727 5.64C10.745 4.79 9.218 4 7.964 4 4.964 4 3 7.279 3 9.95 3 14.868 12 21 12 21s9-6.071 9-11.05C21 7.279 19.036 4 16.036 4c-1.036 0-2.29.546-3.272 1.275l1.472 1.76-1.963 1.7 2.782 2.915L12 15.293l1.527-3.46-2.89-2.915 2.072-1.882s-.49-.79-.982-1.397z"
            fill={4294393682}
            fillRule={1}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 4,
          "position": "absolute",
          "top": 0,
        },
        Object {
          "paddingLeft": 64.8,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={72}
      bbWidth={72}
      color={4283723386}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 72,
            "width": 72,
          },
          Object {
            "flex": 0,
            "height": 72,
            "width": 72,
          },
        ]
      }
      tintColor={4283723386}
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 0h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M12 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm0 14V12.67l-5 3.333v-8l5 3.333V8.003l6 4-6 4z"
          fill={4283723386}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Storyshots Lives God mode + fast slide 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": 180,
        "paddingLeft": 64.8,
        "width": 244.8,
      },
    ]
  }
  testID="lives"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 1000,
          "flex": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        false,
        Object {
          "height": 180,
          "width": 180,
        },
      ]
    }
    testID="lives-3"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {},
            Array [
              Object {
                "color": "#546E7A",
                "fontWeight": "700",
                "textAlign": "center",
              },
              Object {
                "fontSize": 60,
              },
            ],
          ]
        }
      >
        ∞
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 108,
        "left": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
          Object {
            "scaleX": 1,
          },
          Object {
            "scaleY": 1,
          },
        ],
        "width": 108,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={108}
      bbWidth={108}
      color={4294967295}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 108,
            "width": 108,
          },
          Object {
            "flex": 0,
            "height": 108,
            "width": 108,
          },
        ]
      }
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
          fill={4294967295}
          propList={
            Array [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          stroke={4294967295}
          strokeWidth={5}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4282303619}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4282303619}
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0 .001h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
            fill={4282303619}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4282303619}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4282303619}
        vbHeight={25}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M11.727 5.64C10.745 4.79 9.218 4 7.964 4 4.964 4 3 7.279 3 9.95 3 14.868 12 21 12 21s9-6.071 9-11.05C21 7.279 19.036 4 16.036 4c-1.036 0-2.29.546-3.272 1.275l1.472 1.76-1.963 1.7 2.782 2.915L12 15.293l1.527-3.46-2.89-2.915 2.072-1.882s-.49-.79-.982-1.397z"
            fill={4282303619}
            fillRule={1}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 4,
          "position": "absolute",
          "top": 0,
        },
        Object {
          "paddingLeft": 64.8,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={72}
      bbWidth={72}
      color={4283723386}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 72,
            "width": 72,
          },
          Object {
            "flex": 0,
            "height": 72,
            "width": 72,
          },
        ]
      }
      tintColor={4283723386}
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 0h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M12 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm0 14V12.67l-5 3.333v-8l5 3.333V8.003l6 4-6 4z"
          fill={4283723386}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Storyshots Lives God mode 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": 180,
        "paddingLeft": 64.8,
        "width": 244.8,
      },
    ]
  }
  testID="lives"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 1000,
          "flex": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        false,
        Object {
          "height": 180,
          "width": 180,
        },
      ]
    }
    testID="lives-3"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {},
            Array [
              Object {
                "color": "#546E7A",
                "fontWeight": "700",
                "textAlign": "center",
              },
              Object {
                "fontSize": 60,
              },
            ],
          ]
        }
      >
        ∞
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 108,
        "left": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
          Object {
            "scaleX": 1,
          },
          Object {
            "scaleY": 1,
          },
        ],
        "width": 108,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={108}
      bbWidth={108}
      color={4294967295}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 108,
            "width": 108,
          },
          Object {
            "flex": 0,
            "height": 108,
            "width": 108,
          },
        ]
      }
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
          fill={4294967295}
          propList={
            Array [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          stroke={4294967295}
          strokeWidth={5}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4282303619}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4282303619}
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0 .001h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
            fill={4282303619}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4282303619}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4282303619}
        vbHeight={25}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M11.727 5.64C10.745 4.79 9.218 4 7.964 4 4.964 4 3 7.279 3 9.95 3 14.868 12 21 12 21s9-6.071 9-11.05C21 7.279 19.036 4 16.036 4c-1.036 0-2.29.546-3.272 1.275l1.472 1.76-1.963 1.7 2.782 2.915L12 15.293l1.527-3.46-2.89-2.915 2.072-1.882s-.49-.79-.982-1.397z"
            fill={4282303619}
            fillRule={1}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Storyshots Lives Losing life 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": 180,
        "paddingLeft": 64.8,
        "width": 244.8,
      },
    ]
  }
  testID="lives"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 1000,
          "flex": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        false,
        Object {
          "height": 180,
          "width": 180,
        },
      ]
    }
    testID="lives-3-broken"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {},
              Array [
                Object {
                  "color": "#546E7A",
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                Object {
                  "fontSize": 60,
                },
              ],
            ]
          }
        >
          x
          4
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {},
              Array [
                Object {
                  "color": "#546E7A",
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                Object {
                  "fontSize": 60,
                },
              ],
            ]
          }
        >
          x
          3
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 108,
        "left": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
          Object {
            "scaleX": 1,
          },
          Object {
            "scaleY": 1,
          },
        ],
        "width": 108,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={108}
      bbWidth={108}
      color={4294967295}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 108,
            "width": 108,
          },
          Object {
            "flex": 0,
            "height": 108,
            "width": 108,
          },
        ]
      }
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
          fill={4294967295}
          propList={
            Array [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          stroke={4294967295}
          strokeWidth={5}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4294393682}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4294393682}
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0 .001h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
            fill={4294393682}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4294393682}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4294393682}
        vbHeight={25}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M11.727 5.64C10.745 4.79 9.218 4 7.964 4 4.964 4 3 7.279 3 9.95 3 14.868 12 21 12 21s9-6.071 9-11.05C21 7.279 19.036 4 16.036 4c-1.036 0-2.29.546-3.272 1.275l1.472 1.76-1.963 1.7 2.782 2.915L12 15.293l1.527-3.46-2.89-2.915 2.072-1.882s-.49-.79-.982-1.397z"
            fill={4294393682}
            fillRule={1}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Storyshots Lives Winning life 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": 180,
        "paddingLeft": 64.8,
        "width": 244.8,
      },
    ]
  }
  testID="lives"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 1000,
          "flex": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        false,
        Object {
          "height": 180,
          "width": 180,
        },
      ]
    }
    testID="lives-3"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "transform": Array [
            Object {
              "translateY": -180,
            },
          ],
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {},
              Array [
                Object {
                  "color": "#546E7A",
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                Object {
                  "fontSize": 60,
                },
              ],
            ]
          }
        >
          x
          3
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {},
              Array [
                Object {
                  "color": "#546E7A",
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                Object {
                  "fontSize": 60,
                },
              ],
            ]
          }
        >
          x
          2
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 108,
        "left": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
          Object {
            "scaleX": 1,
          },
          Object {
            "scaleY": 1,
          },
        ],
        "width": 108,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={108}
      bbWidth={108}
      color={4294967295}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 108,
            "width": 108,
          },
          Object {
            "flex": 0,
            "height": 108,
            "width": 108,
          },
        ]
      }
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
          fill={4294967295}
          propList={
            Array [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          stroke={4294967295}
          strokeWidth={5}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4294393682}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4294393682}
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0 .001h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
            fill={4294393682}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4294393682}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4294393682}
        vbHeight={25}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M11.727 5.64C10.745 4.79 9.218 4 7.964 4 4.964 4 3 7.279 3 9.95 3 14.868 12 21 12 21s9-6.071 9-11.05C21 7.279 19.036 4 16.036 4c-1.036 0-2.29.546-3.272 1.275l1.472 1.76-1.963 1.7 2.782 2.915L12 15.293l1.527-3.46-2.89-2.915 2.072-1.882s-.49-.79-.982-1.397z"
            fill={4294393682}
            fillRule={1}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Storyshots Lives With value 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "height": 180,
        "paddingLeft": 64.8,
        "width": 244.8,
      },
    ]
  }
  testID="lives"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 1000,
          "flex": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        false,
        Object {
          "height": 180,
          "width": 180,
        },
      ]
    }
    testID="lives-3"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {},
              Array [
                Object {
                  "color": "#546E7A",
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                Object {
                  "fontSize": 60,
                },
              ],
            ]
          }
        >
          x
          3
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {},
              Array [
                Object {
                  "color": "#546E7A",
                  "fontWeight": "700",
                  "textAlign": "center",
                },
                Object {
                  "fontSize": 60,
                },
              ],
            ]
          }
        >
          x
          2
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 108,
        "left": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
          Object {
            "scaleX": 1,
          },
          Object {
            "scaleY": 1,
          },
        ],
        "width": 108,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={108}
      bbWidth={108}
      color={4294967295}
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "height": 108,
            "width": 108,
          },
          Object {
            "flex": 0,
            "height": 108,
            "width": 108,
          },
        ]
      }
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
          fill={4294967295}
          propList={
            Array [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          stroke={4294967295}
          strokeWidth={5}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4294393682}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4294393682}
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0 .001h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
            fill={4294393682}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={108}
        bbWidth={108}
        color={4294393682}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 108,
              "width": 108,
            },
            Object {
              "flex": 0,
              "height": 108,
              "width": 108,
            },
          ]
        }
        tintColor={4294393682}
        vbHeight={25}
        vbWidth={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M11.727 5.64C10.745 4.79 9.218 4 7.964 4 4.964 4 3 7.279 3 9.95 3 14.868 12 21 12 21s9-6.071 9-11.05C21 7.279 19.036 4 16.036 4c-1.036 0-2.29.546-3.272 1.275l1.472 1.76-1.963 1.7 2.782 2.915L12 15.293l1.527-3.46-2.89-2.915 2.072-1.882s-.49-.79-.982-1.397z"
            fill={4294393682}
            fillRule={1}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
